# yt-dlp

./: .gitignore  README.md  pyproject.toml
docs/: expressvpn-regions.md
ops/expressvpn-sidecar/: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  healthcheck.sh
src/ytdlp_mcp/: __init__.py  artifacts.py  config.py  diagnostics.py  download_archive.py  egress.py  egress_config.py  egress_health.py  egress_rotation.py  egress_selection.py  egress_templates.py  errors.py  job_repository.py  jobs.py  options.py  policy.py  preflight.py  server.py  service.py
tests/: test_artifacts.py  test_config.py  test_diagnostics.py  test_download_archive.py  test_egress_config.py  test_egress_health.py  test_egress_rotation.py  test_egress_selection.py  test_egress_templates.py  test_integration_download.py  test_jobs.py  test_live_external.py  test_mcp_server.py  test_options.py  test_policy.py  test_preflight.py
