[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "yt-dlp-mcp"
version = "0.1.0"
description = "Safe MCP server wrapper for yt-dlp"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "yt-dlp MCP contributors" }
]
dependencies = [
  "mcp>=1.9",
  "yt-dlp>=2025.1.15"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8"
]

[project.scripts]
yt-dlp-mcp = "ytdlp_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ytdlp_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
